--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
 }
 .calcbox{
     width: 320px;
-    height: 480px;
+    height: 540px;
     background: #ffb0a3;
     border-radius: 25px;
     box-shadow: 5px 5px 15px #ff6973;
@@ -33,11 +33,13 @@ body{
     justify-content: center;
     gap:10px;
 }
+
 .clearbtn{
     border: none;
     background: #ff6973;
     width: 120px;
     height: 60px;
+    color: #46425e;
     border-radius: 25px;
 }
 .delbtn{
@@ -45,6 +47,7 @@ body{
     background: #00b9be;
     width: 120px;
     height: 60px;
+    color: #46425e;
     border-radius: 25px;
 }
 
@@ -54,4 +57,39 @@ body{
 
 .delbtn:hover{
     background: #007a7e;
+}
+
+.calcsecondmenu{
+    display: flex;
+    justify-content: center;
+    gap:20px;
+    margin: 20px 20px 0 20px;
+}
+
+.calcbtn{
+    border: none;
+    border-radius: 70%;
+    width: 50px;
+    height: 50px;
+    background: #ffeecc;
+    box-shadow: 4px 4px #b48128;
+    color: #46425e;
+}
+
+.calcbtn:hover{
+    background: #cebe97;
+}
+
+.calctxt{
+    color:#f0f3c0;
+    font-size: 36px;
+    text-align: end;
+    margin: 0 20px 40px 0;
+}
+
+.calcrestxt{
+    color:#f0f3c0;
+    font-size: 36px;
+    text-align: end;
+    margin: 0px 20px 0 0;
 }
